--- a/config/polybar/mod/powermenu.ini
+++ b/config/polybar/mod/powermenu.ini
@@ -17,7 +17,7 @@ menu-0-1-foreground = ${color.foreground}
 menu-0-1-background = ${color.background}
 
 menu-0-2 = "  Lock |"
-menu-0-2-exec = ~/.config/i3/lock
+menu-0-2-exec = loginctl lock-session
 menu-0-2-foreground = ${color.foreground}
 menu-0-2-background = ${color.background}
 
